force-app/main/default/objects/Case/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <label>Account Manager</label>
    <description>Account Manager responsible for the customer on this case.</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>DCC_Cases_Account_Manager</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>