force-app/main/default/objects/Case/fields/Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date__c</fullName>
    <label>Approval Date</label>
    <description>Date the case outcome was approved. Intended to be set by automation.</description>
    <type>Date</type>
</CustomField>