force-app/main/default/objects/Case/fields/Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Approval_Required__c</fullName>
    <label>Approval Required</label>
    <description>Indicates the case outcome requires approval.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>