force-app/main/default/objects/Case/fields/Closed_By__c.field-meta.xml
<CustomField>
    <fullName>Closed_By__c</fullName>
    <label>Closed By</label>
    <description>User who closed the case. Intended to be populated by automation.</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>DCC_Cases_Closed</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>