force-app/main/default/objects/Case/fields/Corrective_Action__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Action__c</fullName>
    <label>Corrective Action</label>
    <description>Corrective action taken or required.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>