force-app/main/default/objects/Case/fields/Corrective_Action_Needed__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Action_Needed__c</fullName>
    <label>Corrective Action Needed</label>
    <description>Indicates a corrective action is needed to prevent recurrence.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>