force-app/main/default/objects/Case/fields/Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Amount__c</fullName>
    <label>Credit Amount</label>
    <description>Credit amount issued to the customer.</description>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>