force-app/main/default/objects/Case/fields/Credit_Amount_Approved__c.field-meta.xml
<CustomField>
    <fullName>Credit_Amount_Approved__c</fullName>
    <label>Credit Amount Approved</label>
    <description>Credit amount approved for the dispute.</description>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>