force-app/main/default/objects/Case/fields/Credit_Issued__c.field-meta.xml
<CustomField>
    <fullName>Credit_Issued__c</fullName>
    <label>Credit Issued</label>
    <description>Indicates the credit has been issued to the customer.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>