force-app/main/default/objects/Case/fields/Credit_Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Issued_Date__c</fullName>
    <label>Credit Issued Date</label>
    <description>Date the credit was issued.</description>
    <type>Date</type>
</CustomField>