force-app/main/default/objects/Case/fields/Credit_Officer__c.field-meta.xml
<CustomField>
    <fullName>Credit_Officer__c</fullName>
    <label>Credit Officer</label>
    <description>Credit Officer handling the case. Legacy data is free text and needs transformation before migration.</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>DCC_Cases_Credit_Officer</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>