force-app/main/default/objects/Case/fields/Customer_Acknowledgement_Sent__c.field-meta.xml
<CustomField>
    <fullName>Customer_Acknowledgement_Sent__c</fullName>
    <label>Customer Acknowledgement Sent</label>
    <description>Indicates the customer has been sent an acknowledgement for this case.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>