force-app/main/default/objects/Case/fields/DCC_SLA_Type__c.field-meta.xml
<CustomField>
    <fullName>DCC_SLA_Type__c</fullName>
    <label>SLA Type</label>
    <description>DCC SLA classification (Dispute / Claim / Complaint). Set by the New Dispute/Claim intake flow from Issue Type using the DCC_Issue_Type_Mapping__mdt custom metadata. Used to select the SLA process.</description>
    <inlineHelpText>SLA classification of the case, derived from Issue Type.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dispute</fullName>
            </value>
            <value>
                <fullName>Claim</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>