force-app/main/default/objects/Case/fields/Disputed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Disputed_Amount__c</fullName>
    <label>Disputed Amount</label>
    <description>Amount the customer is disputing.</description>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>