force-app/main/default/objects/Case/fields/Error_Source__c.field-meta.xml
<CustomField>
    <fullName>Error_Source__c</fullName>
    <label>Error Source</label>
    <description>Source of the error. Dependent on Root Cause.</description>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Root_Cause__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Service Centre</fullName>
            </value>
            <value>
                <fullName>Pricing Team</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>