force-app/main/default/objects/Case/fields/Incident_Date__c.field-meta.xml
<CustomField>
    <fullName>Incident_Date__c</fullName>
    <label>Incident Date</label>
    <description>Date the disputed/claimed issue occurred (Date of Issue). Required at intake for Disputes/Claims.</description>
    <inlineHelpText>Date the issue occurred.</inlineHelpText>
    <type>Date</type>
</CustomField>