force-app/main/default/objects/Case/fields/Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount__c</fullName>
    <label>Invoice Amount</label>
    <description>Amount of the primary disputed invoice.</description>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>