force-app/main/default/objects/Case/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <label>Invoice Number</label>
    <description>Primary invoice number for the dispute. Required at intake for Disputes/Claims.</description>
    <type>Text</type>
    <length>100</length>
</CustomField>