force-app/main/default/objects/Case/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <label>Issue</label>
    <description>Billing issue identified. Controls Root Cause.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incorrect Rate</fullName>
            </value>
            <value>
                <fullName>Incorrect Quantity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>