force-app/main/default/objects/Case/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <label>Issue Type</label>
    <description>Type of issue raised. Disputes/Claims only. Required at intake.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Damage to Property</fullName>
            </value>
            <value>
                <fullName>Cost Recovery</fullName>
            </value>
            <value>
                <fullName>Site Clean-up or Rectification Required</fullName>
            </value>
            <value>
                <fullName>Rework or Replacement Needed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>