force-app/main/default/objects/Case/fields/Reopen_Count__c.field-meta.xml
<CustomField>
    <fullName>Reopen_Count__c</fullName>
    <label>Reopen Count</label>
    <description>Number of times the case has been reopened.</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>