force-app/main/default/objects/Case/fields/Reopen_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reopen_Reason__c</fullName>
    <label>Reopen Reason</label>
    <description>Reason the case was reopened.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin Error</fullName>
            </value>
            <value>
                <fullName>Customer Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>