force-app/main/default/objects/Case/fields/RFI_Number__c.field-meta.xml
<CustomField>
    <fullName>RFI_Number__c</fullName>
    <label>RFI Number</label>
    <description>Request for Information number. Disputes/Claims only.</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>