force-app/main/default/objects/Case/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <label>Root Cause</label>
    <description>Root cause of the issue. Dependent on Issue.</description>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Issue__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incorrect Project</fullName>
            </value>
            <value>
                <fullName>Masterfile Setup</fullName>
            </value>
            <value>
                <fullName>Incorrect Order</fullName>
            </value>
            <value>
                <fullName>Keying Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>