force-app/main/default/objects/Case/recordTypes/Complaints.recordType-meta.xml
<RecordType>
    <fullName>Complaints</fullName>
    <active>true</active>
    <businessProcess>DCC_Process</businessProcess>
    <description>Customer complaints.</description>
    <label>Complaints</label>
</RecordType>