force-app/main/default/objects/Case/recordTypes/Disputes_Claims.recordType-meta.xml
<RecordType>
    <fullName>Disputes_Claims</fullName>
    <active>true</active>
    <businessProcess>DCC_Process</businessProcess>
    <description>Disputes and Claims. Dispute vs Claim is differentiated via Issue Type, not a separate record type.</description>
    <label>Disputes/Claims</label>
</RecordType>